# whos-my-good-boy

./: .gitmodules  Dog-Cat-Other Dataset  MobileNet for Dog Recognition  README.md  setup.sh
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: predictions.py
backend/app/core/: config.py  errors.py
backend/app/inference_models/: model_loader.py  model_service.py
backend/app/models/: schemas.py
backend/app/services/: apolo_classifier.py  base.py  dog_classifier.py  general_classifier.py
backend/app/utils/inference_models/: model_loader.py  model_loader_manager.py
backend/tests/: conftest.py
backend/tests/api/: test_predictions.py
backend/tests/inference_models/: test_model_loader.py  test_model_service.py
backend/tests/integration/app/routes/: test_predictions_integration.py
backend/tests/services/: test_general_classifier.py
backend/tests/utils/inference_models/: test_model_loader.py  test_model_loader_manager.py  test_model_service.py
ml/: .gitignore
